# tradingbot

./: .gitignore  README.md  pyproject.toml
wahlbot/: config.py  gui.py  main.py
wahlbot/agent/: perplexity.py  prompt_builder.py  response_parser.py
wahlbot/approval/: telegram_bot.py
wahlbot/decision/: engine.py  ev_calculator.py  filter.py
wahlbot/execution/: logger.py  order_executor.py
wahlbot/monitor/: backtester.py  pnl.py  portfolio.py
wahlbot/polls/: aggregator.py  dawum.py  wikipedia.py
wahlbot/scanner/: kalshi.py  market_parser.py  polymarket.py
wahlbot/tests/: test_filter_and_ev.py
